# Product-Recommender

./: .gitignore  AmazonExtractor.ipynb  FlipkartCategoryExtractor.ipynb  FlipkartExtractor.ipynb  environment.yml  main.py  pyproject.toml  requirements.txt
data/result/: 1672226264_192_178_4_5.csv  1672227274_142_170_10_7.csv  1672233008_189_97_5_10.csv  1672234156_179_168_4_5.csv
data/search/: masterSearch.json
frontend/: home.py
frontend/pages/: 2_custom_search.py  3_featured_products.py
pages/: 1_home.py  2_Featured_Products.py
src/product_recommender/: AmazonExtractor.ipynb  __init__.py  config.py  constants.py
src/product_recommender/data_handler/: __init__.py  loader.py  saver.py  storage.py
src/product_recommender/display/: __init__.py  display_data.py
src/product_recommender/pages/: 1_Custom_Search.py
src/product_recommender/services/: __init__.py  analytics.py  cache.py  scraper.py  search.py
src/product_recommender/utils/: __init__.py  helpers.py  logging.py
src/product_recommender/utils/scrapers/: __init__.py  amazon_scraper.py  base_scraper.py  flipkart_scraper.py
